[M152] [Vertical Tabs] Throttle undo group snackbars during tab drag operations
Original change's description:
> [Vertical Tabs] Throttle undo group snackbars during tab drag operations
>
> Pause undo snackbars while a user is actively dragging tabs in the
> vertical tab strip. Displaying an undo snackbar during a drag can
> interfere with ongoing touch gestures and shift UI elements
> unexpectedly.
> * Implement the undo bar throttle interface on the undo group snackbar
> controller using a token holder so snackbar requests are saved and
> delayed while throttled.
> * Update the item touch helper callback to acquire a throttle token
> when a tab drag starts and release it as soon as the drag settles or is
> canceled.
>
> Bug: 509226293, 537043901
> Change-Id: I66e5b61402fefbfdb4c69138155affec6b8d04ee
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/8156660
> Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
> Auto-Submit: Gazal Agarwal <agazal@google.com>
> Commit-Queue: Calder Kitagawa <ckitagawa@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1670217}

(cherry picked from commit b7c1ebe83f1850702f396a545415d397492015bc)

Bug: 540871892,509226293,537043901
Change-Id: I66e5b61402fefbfdb4c69138155affec6b8d04ee
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/8183266
Commit-Queue: rubber-stamper@appspot.gserviceaccount.com <rubber-stamper@appspot.gserviceaccount.com>
Bot-Commit: rubber-stamper@appspot.gserviceaccount.com <rubber-stamper@appspot.gserviceaccount.com>
Auto-Submit: chrome-cherry-picker@chops-service-accounts.iam.gserviceaccount.com <chrome-cherry-picker@chops-service-accounts.iam.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7977@{#302}
Cr-Branched-From: b7fe14017379ddffae396d944fb8b59a5896c261-refs/heads/main@{#1669021}